src/test/pass/nested_binary.j
class Main {
    Void main() {
        Bool b;
        b = true && (b == (b || false));
    }
}
