src/test/fail/empty_if_block.j
class Main {
    Void main() {
        if (true) {
           // this should have at least one statement
        } else {
            return;
        }
    }
}
